@@ -35,6 +35,7 @@
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
  <notes>
 * [mms] SECURITY: Fix XSS vulnerability on smartmobile message page (João Machado &lt;geral@jpaulo.eu&gt;).
+* [jan] Fix empty label for spellcheck button.
 * [mms] Fix signature verification for PGP combined signed &amp; encrypted messages (Bug #12142).
 * [mms] Don&apos;t display empty mailbox action for mailboxes when Virtual Trash is active (Bug #12162).
 * [mms] Fix renaming mailboxes in dynamic view.
@@ -2951,6 +2952,7 @@
    <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
    <notes>
 * [mms] SECURITY: Fix XSS vulnerability on smartmobile message page (João Machado &lt;geral@jpaulo.eu&gt;).
+* [jan] Fix empty label for spellcheck button.
 * [mms] Fix signature verification for PGP combined signed &amp; encrypted messages (Bug #12142).
 * [mms] Don&apos;t display empty mailbox action for mailboxes when Virtual Trash is active (Bug #12162).
 * [mms] Fix renaming mailboxes in dynamic view.
